# PointCloud-Processing

./: README.md
point_cloud_proc/: CMakeLists.txt  package.xml
point_cloud_proc/config/: filter_cloud_config.yaml  preprocess_cloud_config.yaml
point_cloud_proc/include/point_cloud_proc/: clustering.hpp  filter_cloud.hpp  plane_segmentation.hpp  preprocess_cloud.hpp
point_cloud_proc/launch/: environment.launch.py  point_cloud_filtering.launch.py
point_cloud_proc/msg/: ArrayPointCloud.msg  CustomBoundingBox3D.msg  CustomBoundingBoxes3D.msg
point_cloud_proc/src/: clustering.cpp  filter_cloud.cpp  plane_segmentation.cpp  preprocess_cloud.cpp  test_pointer_returns.cpp  utils.cpp
